--- a/IPSX/Common/Strings/Localizable.strings
+++ b/IPSX/Common/Strings/Localizable.strings
@@ -8,3 +8,7 @@
 
 "Generic Error Message" = "Something went wrong. Please try again!";
 "Login Failed Error Message" = "Login failed. Please try again!";
+"Test Proxy Message" = "Try it now for free!";
+"Test Proxy Name" = "Free Test Proxy";
+"active" = "active";
+"expired" = "expired";
