Implement flow logic for ETH address

--- a/IPSX/Common/Strings/Localizable.strings
+++ b/IPSX/Common/Strings/Localizable.strings
@@ -12,3 +12,4 @@
 "Test Proxy Name" = "Free Test Proxy";
 "active" = "active";
 "expired" = "expired";
+"ETH Address Already Used Error Message" = "The eth address has already been taken.";
