Add one more error type handling for Login & integrate country request for proxies + some cleaning

--- a/IPSX/Common/Strings/Localizable.strings
+++ b/IPSX/Common/Strings/Localizable.strings
@@ -8,6 +8,7 @@
 
 "Generic Error Message" = "Something went wrong. Please try again!";
 "Login Failed Error Message" = "Login failed. Please try again!";
+"Invalid Login Error Message" = "User account invalid";
 "Test Proxy Message" = "Try it now for free!";
 "Test Proxy Name" = "Free Test Proxy";
 "active" = "active";
