--- a/IPSX/Common/Strings/Localizable.strings
+++ b/IPSX/Common/Strings/Localizable.strings
@@ -15,3 +15,4 @@
 "expired" = "expired";
 "ETH Address Already Used Error Message" = "The eth address has already been taken.";
 "User Info Error Message" = "Error retrieving user info.";
+"Logout Error Message" = "Logout failed";
