Implement data loading logic for logged in user

--- a/IPSX/Common/Strings/Localizable.strings
+++ b/IPSX/Common/Strings/Localizable.strings
@@ -16,3 +16,4 @@
 "ETH Address Already Used Error Message" = "The eth address has already been taken.";
 "User Info Error Message" = "Error retrieving user info.";
 "Logout Error Message" = "Logout failed";
+"Refresh Data Error Message" = "Couldn't refresh data";
