error handling for insufficient balance

--- a/IPSX/Common/Strings/Localizable.strings
+++ b/IPSX/Common/Strings/Localizable.strings
@@ -17,3 +17,4 @@
 "User Info Error Message" = "Error retrieving user info.";
 "Logout Error Message" = "Logout failed";
 "Refresh Data Error Message" = "Couldn't refresh data";
+"Insufficient Balance Error Message" = "Insufficient balance";
