Update the app for language localization

--- a/IPSX/Common/Strings/Localizable.strings
+++ b/IPSX/Common/Strings/Localizable.strings
@@ -18,3 +18,11 @@
 "Logout Error Message" = "Logout failed";
 "Refresh Data Error Message" = "Couldn't refresh data";
 "Insufficient Balance Error Message" = "Insufficient balance";
+"Balance Empty Info Message" = "Your current balance is empty! Please request tokens.";
+"My Address" = "My Address";
+"Amount Limits Error Message" = "The amount should be between 20 and 5000";
+"Select Valid ETH Wallet Message" = "Select a valid ETH wallet";
+"Redirect to Settings Error Message" = "Can't redirect, please open the Settings manually.";
+"Saved" = "Saved";
+"Select a country" = "Select a country";
+
