Add localization for romanian language

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -25,4 +25,11 @@
 "Redirect to Settings Error Message" = "Can't redirect, please open the Settings manually.";
 "Saved" = "Saved";
 "Select a country" = "Select a country";
+"Package" = "Package";
+"Other Details" = "Other Details";
+"New proxy created! Copy pac link to continue" = "New proxy created! Copy pac link to continue";
+"Start Date" = "Start Date";
+"End Date" = "End Date";
+"Country" = "Country";
+"User IP" = "User IP";
 
