Implement logic for options & cleanup

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -32,4 +32,6 @@
 "End Date" = "End Date";
 "Country" = "Country";
 "User IP" = "User IP";
+"Max ETH addresses Error Message" = "You are allowed to have max 5 ETH addresses";
+"Max Token Requests Error Message" = "You are allowed to make max 5 requests per day";
 
