Use token request limits from API

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "Insufficient Balance Error Message" = "Insufficient balance";
 "Balance Empty Info Message" = "Your current balance is empty! Please request tokens.";
 "My Address" = "My Address";
-"Amount Limits Error Message" = "The amount should be between 20 and 5000";
+"Amount Limits Error Message Min %@ Max %@" = "The amount should be between %@ and %@";
 "Select Valid ETH Wallet Message" = "Select a valid ETH wallet";
 "Redirect to Settings Error Message" = "Can't redirect, please open the Settings manually.";
 "Saved" = "Saved";
