--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "Insufficient Balance Error Message" = "Fonduri insuficiente";
 "Balance Empty Info Message" = "Nu aveți nicio moneda IPSX! Apăsați 'Cerere tokeni de test'";
 "My Address" = "Adresa mea";
-"Amount Limits Error Message" = "Suma trebuie să fie cuprinsă între 20 și 5000 IPSX";
+"Amount Limits Error Message Min %@ Max %@" = "Suma trebuie să fie cuprinsă între %@ și %@ IPSX";
 "Select Valid ETH Wallet Message" = "Selectați o adresă validă de Ethereum";
 "Redirect to Settings Error Message" = "Redirectarea a eșuat, deschideți setările aplicației manual.";
 "Saved" = "Salvat";
