--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -34,5 +34,8 @@
 "User IP" = "IP utilizator";
 "Max ETH addresses Error Message" = "Aveți voie sa adaugați maxim 5 adrese";
 "Max Token Requests Error Message" = "Aveți voie sa efectuați maxim 5 cereri pe zi";
+"Delete Address Confirmation Alert Title" = "Sigur doriți să ștergeți această adresă?";
+"Cancel" = "Anulează";
+"Delete" = "Șterge";
 
 
