Update the loading spinner UI and interaction

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -32,8 +32,8 @@
 "End Date" = "End Date";
 "Country" = "Country";
 "User IP" = "User IP";
-"Max ETH addresses Error Message" = "You are allowed to have max 5 ETH addresses";
-"Max Token Requests Error Message" = "You are allowed to make max 5 requests per day";
+"Max %@ ETH addresses Error Message" = "You are allowed to have max %@ ETH addresses";
+"Max %@ Token Requests Error Message" = "You are allowed to make max %@ requests per day";
 "Delete Address Confirmation Alert Title" = "Are you sure you want to delete this address?";
 "Cancel" = "Cancel";
 "Delete" = "Delete";
