Updates for save password flow

--- a/IPSX/Flows/Profile/Storyboard/ro-RO.lproj/Profile.strings
+++ b/IPSX/Flows/Profile/Storyboard/ro-RO.lproj/Profile.strings
@@ -76,3 +76,6 @@
 
 /* Class = "UILabel"; text = "Old Password"; ObjectID = "z8q-vH-VY5"; */
 "z8q-vH-VY5.text" = "Parola veche";
+
+/* Class = "UILabel"; text = "At least 8 characters, one number, one uppercase character and one special character @$!%*?&"; ObjectID = "VZu-5N-81Z"; */
+"VZu-5N-81Z.text" = "Cel puțin 8 litere, un număr, o literă de tipar și un caracter special @$!%*?&";
