--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -37,3 +37,5 @@
 "Delete Address Confirmation Alert Title" = "Are you sure you want to delete this address?";
 "Cancel" = "Cancel";
 "Delete" = "Delete";
+
+"No internet connection" = "No internet connection";
