Change Password Logic

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -39,3 +39,4 @@
 "Delete" = "Delete";
 
 "No internet connection" = "No internet connection";
+"Wrong Old Password Error Message" = "Wrong old password";
