Update localized strings

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -40,3 +40,5 @@
 
 "No internet connection" = "No internet connection";
 "Wrong Old Password Error Message" = "Wrong old password";
+"Change Password Success Message" = "Password changed";
+"Login After Change Password Alert Message" = "Password changed. Tap OK to Login";
