Localize camera availability strings

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -42,3 +42,6 @@
 "Wrong Old Password Error Message" = "Wrong old password";
 "Change Password Success Message" = "Password changed";
 "Login After Change Password Alert Message" = "Password changed. Tap OK to Login";
+"Scanning not supported message" = "Scanning not supported";
+"No Cammera Message" = "Your device does not support scanning a code from an item. Please use a device with a camera.";
+"OK" = "OK";
