Handle no internet connection on loading screen

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -44,3 +44,5 @@
 "Scanning not supported message" = "Scanning not supported";
 "No Cammera Message" = "Your device does not support scanning a code from an item. Please use a device with a camera.";
 "OK" = "OK";
+"Connect to the internet message" = "Please connect to the internet to continue!";
+"Loading message" = "Loading, please wait...";
