--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -46,3 +46,4 @@
 "OK" = "OK";
 "Connect to the internet message" = "Please connect to the internet to continue!";
 "Loading message" = "Loading, please wait...";
+"Facebook Login Error Message" = "Facebook Login Error. Please try again!";
