Update fb integration because the API is changed

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -47,3 +47,4 @@
 "Connect to the internet message" = "Please connect to the internet to continue!";
 "Loading message" = "Loading, please wait...";
 "Facebook Login Error Message" = "Facebook Login Error. Please try again!";
+"User already registered Error Message" = "This user is already registered";
