Error handling for facebook login & register

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -48,3 +48,4 @@
 "Loading message" = "Loading, please wait...";
 "Facebook Login Error Message" = "Facebook Login Error. Please try again!";
 "User already registered Error Message" = "This user is already registered. Please go to Login";
+"User Not Registered Error Message" = "This user has not registered with Facebook";
