--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -49,3 +49,7 @@
 "Facebook Login Error Message" = "Facebook Login Error. Please try again!";
 "User already registered Error Message" = "This user is already registered. Please go to Login";
 "User Not Registered Error Message" = "This user has not registered with Facebook";
+"Enroll for Testing Title" = "Enroll for Testing";
+"Enroll for Staking Title" = "Enroll for Staking";
+"Enrolled for Testing Title" = "Enrolled for Testing";
+"Enrolled for Staking Title" = "Enrolled for Staking";
