--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -53,3 +53,8 @@
 "Enroll for Staking Title" = "Enroll for Staking";
 "Enrolled for Testing Title" = "Enrolled for Testing";
 "Enrolled for Staking Title" = "Enrolled for Staking";
+"Add ETH Address text" = "Add ETH Address";
+"Add your ETH address text" = "Add your ETH address";
+"Edit ETH Address text" = "Edit ETH Address";
+"Edit your ETH address text" = "Edit your ETH address";
+
