--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -57,4 +57,6 @@
 "Add your ETH address text" = "Add your ETH address";
 "Edit ETH Address text" = "Edit ETH Address";
 "Edit your ETH address text" = "Edit your ETH address";
-
+"Connect to WiFi network message" = "Please connect to a WiFi network";
+"Getting IP info..." = "Getting IP info...";
+"Proxy locked on IP %@ message" = "The proxy will be locked on your current IP address: %@";
