Update landing page and register terms page

--- a/IPSX/Storyboard/ro-RO.lproj/Landing.strings
+++ b/IPSX/Storyboard/ro-RO.lproj/Landing.strings
@@ -1,6 +1,6 @@
 
 /* Class = "UILabel"; text = "Token sale hard cap 10,800 Ether. \nAccepted currency: ether"; ObjectID = "gHa-Hj-Pph"; */
-"gHa-Hj-Pph.text" = "Capital maxim vânzare 10,800 Ether. \nMoneda acceptată: ether";
+"gHa-Hj-Pph.text" = "Bine ați venit la";
 
 /* Class = "UIButton"; normalTitle = "Register"; ObjectID = "kCB-he-W31"; */
 "kCB-he-W31.normalTitle" = "Înregistrare";
