--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -62,3 +62,4 @@
 "Proxy locked on IP %@ message" = "The proxy will be locked on your current IP address: %@";
 "Proxy Expired Alert Message" = "This proxy has expired, you can no longer use it!";
 "Device IP %@ Mismatch Alert Message" = "Your device's IP %@ doesn't match the IP used to activate the proxy!";
+"Need one validated ETH address message." = "You need to have at least one validated ETH address.";
