--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -63,3 +63,4 @@
 "Proxy Expired Alert Message" = "This proxy has expired, you can no longer use it!";
 "Device IP %@ Mismatch Alert Message" = "Your device's IP %@ doesn't match the IP used to activate the proxy!";
 "Need one validated ETH address message." = "You need to have at least one validated ETH address.";
+"Address Locked Toast Message" = "You can't delete this ETH address because it's locked";
