II-131 -> logout user after delete account

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -64,3 +64,4 @@
 "Device IP %@ Mismatch Alert Message" = "Your device's IP %@ doesn't match the IP used to activate the proxy!";
 "Need one validated ETH address message." = "You need to have at least one validated ETH address.";
 "Address Locked Toast Message" = "You can't delete this ETH address because it's locked";
+"User Deleted Error Message" = "Your account has been deleted. Please contact support for details.";
