--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -65,3 +65,9 @@
 "Need one validated ETH address message." = "You need to have at least one validated ETH address.";
 "Address Locked Toast Message" = "You can't delete this ETH address because it's locked";
 "User Deleted Error Message" = "Your account has been deleted. Please contact support for details.";
+"Token Deposit Created %@ IPSX expiration date %@ Message" = "Deposit created successfully! Please make a %@ IPSX payment until deposit expiration date: %@";
+"Time Remaining %@" = "Time Remaining: %@";
+"Create Deposit Not Possible Message" = "You have a pending deposit. Please cancel it before creating a new one.";
+
+
+
