--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -65,3 +65,17 @@
 "Need one validated ETH address message." = "You need to have at least one validated ETH address.";
 "Address Locked Toast Message" = "You can't delete this ETH address because it's locked";
 "User Deleted Error Message" = "Your account has been deleted. Please contact support for details.";
+"Token Deposit Created %@ IPSX expiration date %@ Message" = "Deposit created successfully! Please make a %@ IPSX payment until deposit expiration date: %@";
+"Time Remaining %@" = "Time Remaining: %@";
+"Create Deposit Not Possible Message" = "You have a pending deposit. Please cancel it before creating a new one.";
+
+//Kyc Status
+"Unknown Status Text"    = "Unknown";
+"Registered Status Text" = "Registered";
+"Approved Status Text"   = "Approved";
+"Pending Status Text"    = "Pending";
+"Incomplete Status Text" = "Incomplete";
+"Waiting Status Text"    = "Waiting";
+"Rejected Status Text"   = "Rejected";
+"Accepted Status Text"   = "Accepted";
+
