Make token deposits screen to support floats and update the input text keyboard

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -68,6 +68,7 @@
 "Token Deposit Created %@ IPSX expiration date %@ Message" = "Deposit created successfully! Please make a %@ IPSX payment until deposit expiration date: %@";
 "Time Remaining %@" = "Time Remaining: %@";
 "Create Deposit Not Possible Message" = "You have a pending deposit. Please cancel it before creating a new one.";
+"Deposit Wrong Amount Error Message" = "The amount should be greater than zero!";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
