Update new screens to suppot localisation

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -70,6 +70,8 @@
 "Create Deposit Not Possible Message" = "You have a pending deposit. Please cancel it before creating a new one.";
 "Deposit Wrong Amount Error Message" = "The amount should be greater than zero!";
 "Reset Password Not Possible Message" = "Reset password of this account is not possible from IPSX app.";
+"Requested" = "Requested";
+"Received" = "Received";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
