--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -37,4 +37,50 @@
 "Cancel" = "Anulează";
 "Delete" = "Șterge";
 
+"No internet connection" = "Făra conexiune la internet";
+"Wrong Old Password Error Message" = "Parola veche greșită";
+"Change Password Success Message" = "Parola schimbată";
+"Login After Change Password Alert Message" = "Parola schimbată. Apasă OK pentru Login";
+"Scanning not supported message" = "Scanarea nu e suportată";
+"No Cammera Message" = "Dispozitivul dumneavoastră nu suporta scanarea. Folosiți un dispozitiv cu cameă.";
+"OK" = "OK";
+"Connect to the internet message" = "Conectați-vă la internet pentru a continua!";
+"Loading message" = "Îcarcă, așteptați...";
+"Facebook Login Error Message" = "Eroare conectare cu Facebook. Mai incercați odată!";
+"User already registered Error Message" = "Utilizatorul este deja înregistrat. Mergeți la Login";
+"User Not Registered Error Message" = "Utilizatorul nu este inregistrat cu Facebook";
+"Enroll for Testing Title" = "înrolare Testing";
+"Enroll for Staking Title" = "Înrolare Staking";
+"Enrolled for Testing Title" = "Înrolat pentru Testing";
+"Enrolled for Staking Title" = "Înrolat pentru Staking";
+"Add ETH Address text" = "Adaugă adresa ETH";
+"Add your ETH address text" = "Adaugă adresa ETH";
+"Edit ETH Address text" = "Editează adresa ETH";
+"Edit your ETH address text" = "Editează adresa ETH";
+"Connect to WiFi network message" = "Conectați-vă la o rețea WiFi";
+"Getting IP info..." = "Obținere IP info...";
+"Proxy locked on IP %@ message" = "Proxiul va fi blocat pe această adresa de IP: %@";
+"Proxy Expired Alert Message" = "Proxiul a expirat, nu mai poate fi folosit!";
+"Device IP %@ Mismatch Alert Message" = "IP-ul %@ actual nu se portivește cu cel folosit la activarea proxiului!";
+"Need one validated ETH address message." = "Este nevoie de cel puțin o adresă validă de ETH.";
+"Address Locked Toast Message" = "Adresa ETH nu poate fi ștearsă pentru ca e blocată";
+"User Deleted Error Message" = "Contul a fost șters. Contactați suportul pentru detalii.";
+"Token Deposit Created %@ IPSX expiration date %@ Message" = "Depozitul a fost creat cu succes! Depozitați %@ IPSX înainte de expirarea termenului: %@";
+"Time Remaining %@" = "Timp rămas: %@";
+"Create Deposit Not Possible Message" = "Există un depozit în așteptare. Așteptatți sau anulați-l înainte de a crea altul nou.";
+"Deposit Wrong Amount Error Message" = "Suma trebuie să fie mai mare decât zero!";
+"Reset Password Not Possible Message" = "Resetarea parolei nu este posibila prin intermediula plicației IPSX.";
+"Requested" = "Ceruți";
+"Received" = "Primiți";
+
+//Kyc Status
+"Unknown Status Text"    = "Necunoscut";
+"Registered Status Text" = "Înregistrat";
+"Approved Status Text"   = "Aprobat";
+"Pending Status Text"    = "În așteptare";
+"Incomplete Status Text" = "Incomplet";
+"Waiting Status Text"    = "În coadă";
+"Rejected Status Text"   = "Respins";
+"Accepted Status Text"   = "Acceptat";
+
 
