--- a/IPSX/Storyboard/ro-RO.lproj/Main.strings
+++ b/IPSX/Storyboard/ro-RO.lproj/Main.strings
@@ -117,7 +117,7 @@
 "hqu-vV-rz5.text" = "Silver Pack";
 
 /* Class = "UILabel"; text = "Address from CryptoWallet"; ObjectID = "og5-Iq-kw4"; */
-"og5-Iq-kw4.text" = "Address from CryptoWallet";
+"og5-Iq-kw4.text" = "Addresa din CryptoWallet";
 
 /* Class = "UILabel"; text = "Silver Pack"; ObjectID = "uq0-3n-dFX"; */
 "uq0-3n-dFX.text" = "Silver Pack";
