--- a/IPSX/Flows/EnrolTesting/Storyboard/ro-RO.lproj/EnrolTesting.strings
+++ b/IPSX/Flows/EnrolTesting/Storyboard/ro-RO.lproj/EnrolTesting.strings
@@ -1,75 +1,75 @@
 
 /* Class = "UILabel"; text = "Please make sure that you provide an Ethereum Mainnet valid ETH address that is NOT from an exchange and for which you are in control of its private key."; ObjectID = "2yC-ft-jQC"; */
-"2yC-ft-jQC.text" = "Please make sure that you provide an Ethereum Mainnet valid ETH address that is NOT from an exchange and for which you are in control of its private key.";
+"2yC-ft-jQC.text" = "Asigurați-vă ca dețineți cheia privata ETH. Nu folosiți adrese de pe exchanges.";
 
 /* Class = "UILabel"; text = "Address from CryptoWallet"; ObjectID = "4wC-12-jNu"; */
-"4wC-12-jNu.text" = "Address from CryptoWallet";
+"4wC-12-jNu.text" = "Addresa din CryptoWallet";
 
 /* Class = "UILabel"; text = "Invalid address"; ObjectID = "9CP-en-ApU"; */
-"9CP-en-ApU.text" = "Invalid address";
+"9CP-en-ApU.text" = "Adresă invalidă";
 
 /* Class = "UIButton"; normalTitle = "Frequently Asked Questions"; ObjectID = "9ZY-S6-LfS"; */
-"9ZY-S6-LfS.normalTitle" = "Frequently Asked Questions";
+"9ZY-S6-LfS.normalTitle" = "Întrebări frecvente";
 
 /* Class = "UILabel"; text = "No valid address matched"; ObjectID = "AoX-bW-M97"; */
-"AoX-bW-M97.text" = "No valid address matched";
+"AoX-bW-M97.text" = "Nicio adresă validă";
 
 /* Class = "UILabel"; text = "Every person that enrolls for the testing program will receive 250 IPSX. "; ObjectID = "DiP-I3-UtB"; */
-"DiP-I3-UtB.text" = "Every person that enrolls for the testing program will receive 250 IPSX. ";
+"DiP-I3-UtB.text" = "Fiecare persoană înscrisă in programul de testing va primi 250 IPSX. ";
 
 /* Class = "UILabel"; text = "Testing Program"; ObjectID = "FS8-yl-YRD"; */
-"FS8-yl-YRD.text" = "Testing Program";
+"FS8-yl-YRD.text" = "Program Testing";
 
 /* Class = "UILabel"; text = "Testing Program"; ObjectID = "Hq9-9i-TcC"; */
-"Hq9-9i-TcC.text" = "Testing Program";
+"Hq9-9i-TcC.text" = "Program Testing";
 
 /* Class = "UILabel"; text = "Your Ethereum Address"; ObjectID = "KvQ-75-tlu"; */
-"KvQ-75-tlu.text" = "Your Ethereum Address";
+"KvQ-75-tlu.text" = "Adresa ETH";
 
 /* Class = "UILabel"; text = "We will transfer the tokens in this address."; ObjectID = "Mt8-Py-2ut"; */
-"Mt8-Py-2ut.text" = "We will transfer the tokens in this address.";
+"Mt8-Py-2ut.text" = "Vom transfera tokenii către această adresă.";
 
 /* Class = "UIButton"; normalTitle = "Frequently Asked Questions"; ObjectID = "Q38-CH-MuW"; */
-"Q38-CH-MuW.normalTitle" = "Frequently Asked Questions";
+"Q38-CH-MuW.normalTitle" = "Întrebări frecvente";
 
 /* Class = "UILabel"; text = "0x000752563f7d0c7cE8edc761Bb7281957Df530EC"; ObjectID = "S0J-KF-mfY"; */
 "S0J-KF-mfY.text" = "0x000752563f7d0c7cE8edc761Bb7281957Df530EC";
 
 /* Class = "UIButton"; normalTitle = "Join Product Testing"; ObjectID = "hIE-vj-EUu"; */
-"hIE-vj-EUu.normalTitle" = "Join Product Testing";
+"hIE-vj-EUu.normalTitle" = "Înscrieți-vă pentru Testing";
 
 /* Class = "UILabel"; text = "Enroll for Testing"; ObjectID = "j2z-oO-dA5"; */
-"j2z-oO-dA5.text" = "Enroll for Testing";
+"j2z-oO-dA5.text" = "Înrolare Testing";
 
 /* Class = "UILabel"; text = "Join IPSX Product Testing"; ObjectID = "jpS-DU-WoV"; */
-"jpS-DU-WoV.text" = "Join IPSX Product Testing";
+"jpS-DU-WoV.text" = "Înrolare testare produse IPSX";
 
 /* Class = "UIButton"; normalTitle = "Done"; ObjectID = "lKg-hF-7e6"; */
-"lKg-hF-7e6.normalTitle" = "Done";
+"lKg-hF-7e6.normalTitle" = "Gata";
 
 /* Class = "UILabel"; text = "Date"; ObjectID = "lSv-W7-BFm"; */
-"lSv-W7-BFm.text" = "Date";
+"lSv-W7-BFm.text" = "Data";
 
 /* Class = "UILabel"; text = "20 Apr 2018"; ObjectID = "mA2-tw-6mY"; */
 "mA2-tw-6mY.text" = "20 Apr 2018";
 
 /* Class = "UILabel"; text = "Details"; ObjectID = "olH-hR-6PL"; */
-"olH-hR-6PL.text" = "Details";
+"olH-hR-6PL.text" = "Detalii";
 
 /* Class = "UILabel"; text = "12:00"; ObjectID = "sgT-xq-RXg"; */
 "sgT-xq-RXg.text" = "12:00";
 
 /* Class = "UILabel"; text = "We will transfer the tokens in this address."; ObjectID = "tth-nc-IPA"; */
-"tth-nc-IPA.text" = "We will transfer the tokens in this address.";
+"tth-nc-IPA.text" = "Vom transfera tokenii către această adresă.";
 
 /* Class = "UIButton"; normalTitle = "Continue"; ObjectID = "vns-s1-2om"; */
-"vns-s1-2om.normalTitle" = "Continue";
+"vns-s1-2om.normalTitle" = "Continuă";
 
 /* Class = "UILabel"; text = "Join IPSX Product Testing"; ObjectID = "xkV-N2-8Cd"; */
-"xkV-N2-8Cd.text" = "Join IPSX Product Testing";
+"xkV-N2-8Cd.text" = "Înrolare testare produse IPSX";
 
 /* Class = "UILabel"; text = "Invalid address"; ObjectID = "xrn-3F-kNf"; */
-"xrn-3F-kNf.text" = "Invalid address";
+"xrn-3F-kNf.text" = "Adresă invalidă";
 
 /* Class = "UILabel"; text = "No valid address matched"; ObjectID = "zil-92-WL7"; */
-"zil-92-WL7.text" = "No valid address matched";
+"zil-92-WL7.text" = "Nicio adresă validă";
