--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -60,7 +60,7 @@
 "Connect to WiFi network message" = "Please connect to a WiFi network";
 "Getting IP info..." = "Getting IP info...";
 "Proxy locked on IP %@ message" = "The proxy will be locked on your current IP address: %@";
-"Proxy Expired Alert Message" = "This proxy has expired, you can no longer use it!";
+"Proxy Expired Alert Message" = "You can no longer use this proxy.";
 "Device IP %@ Mismatch Alert Message" = "Your device's IP %@ doesn't match the IP used to activate the proxy!";
 "Need one validated ETH address message." = "You need to have at least one validated ETH address.";
 "Address Locked Toast Message" = "You can't delete this ETH address because it's locked";
