Starting to implement deep linking for login, activate delete account + cleaning

--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -72,6 +72,7 @@
 "Reset Password Not Possible Message" = "Resetarea parolei nu este posibila prin intermediula plicației IPSX.";
 "Requested" = "Ceruți";
 "Received" = "Primiți";
+"Wrong Password Error Message" = "Parolă greșită. Încercați din nou!";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
