--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -72,6 +72,7 @@
 "Reset Password Not Possible Message" = "Reset password of this account is not possible from IPSX app.";
 "Requested" = "Requested";
 "Received" = "Received";
+"Wrong Password Error Message" = "Wrong password. Please try again!";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
