Devtask #II-175 Update the staking logic if the staking program has ended

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -72,6 +72,8 @@
 "Reset Password Not Possible Message" = "Reset password of this account is not possible from IPSX app.";
 "Requested" = "Requested";
 "Received" = "Received";
+"Reflink Copied Message" = "The refferal link has been copied, send it to your friends for register.";
+"Staking Program end alert message %@" = "The Staking Program for this session has been closed on  %@";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
