--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -72,6 +72,8 @@
 "Reset Password Not Possible Message" = "Resetarea parolei nu este posibila prin intermediula plicației IPSX.";
 "Requested" = "Ceruți";
 "Received" = "Primiți";
+"Reflink Copied Message" = "Linkul a fost copiat, trimiteți-l prietenilor pentru înregistrare.";
+"Staking Program end alert message %@" = "Programil de Staking s-a incheiat in data de %@";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
