--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -74,6 +74,7 @@
 "Received" = "Received";
 "Reflink Copied Message" = "The refferal link has been copied, send it to your friends for register.";
 "Staking Program end alert message %@" = "The Staking Program for this session has been closed on  %@";
+"Enrolled Address Delete Message" = "The ETH address will be removed from staking and testing program";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
