--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -74,6 +74,8 @@
 "Received" = "Primiți";
 "Reflink Copied Message" = "Linkul a fost copiat, trimiteți-l prietenilor pentru înregistrare.";
 "Staking Program end alert message %@" = "Programil de Staking s-a incheiat in data de %@";
+"Enrolled Address Delete Message" = "Adresa va fi scoasă din programele de Tesing și Staking";
+
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
