fix typo and rephrase

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -72,7 +72,7 @@
 "Reset Password Not Possible Message" = "Reset password of this account is not possible from IPSX app.";
 "Requested" = "Requested";
 "Received" = "Received";
-"Reflink Copied Message" = "The refferal link has been copied, send it to your friends for register.";
+"Reflink Copied Message" = "The referral link has been copied. Send it to your friends.";
 "Staking Program end alert message %@" = "The Staking Program for this session has been closed on  %@";
 "Enrolled Address Delete Message" = "The ETH address will be removed from staking and testing program";
 "Wrong Password Error Message" = "Wrong password. Please try again!";
