--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -72,8 +72,8 @@
 "Reset Password Not Possible Message" = "Resetarea parolei nu este posibila prin intermediula plicației IPSX.";
 "Requested" = "Ceruți";
 "Received" = "Primiți";
-"Reflink Copied Message" = "Linkul a fost copiat, trimiteți-l prietenilor pentru înregistrare.";
-"Staking Program end alert message %@" = "Programil de Staking s-a incheiat in data de %@";
+"Reflink Copied Message" = "Linkul a fost copiat. Trimiteți-l prietenilor.";
+"Staking Program end alert message %@" = "Programul de Staking s-a incheiat in data de %@";
 "Enrolled Address Delete Message" = "Adresa va fi scoasă din programele de Tesing și Staking";
 "Wrong Password Error Message" = "Parolă greșită. Încercați din nou!";
 
