UI updates needed for delete account flow

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -76,6 +76,10 @@
 "Staking Program end alert message %@" = "The Staking Program for this session has been closed on %@";
 "Enrolled Address Delete Message" = "The ETH address will be removed from staking and testing program";
 "Wrong Password Error Message" = "Wrong password. Please try again!";
+"Abort Delete Account" = "Abort Delete Account";
+"Delete Account" = "Delete Account";
+"Delete Confirm Email Message" = "Check your email to confirm your delete account action.";
+"Delete Scheduled Message %@" = "Your account is scheduled to be deleted on %@";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
