--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -76,6 +76,10 @@
 "Staking Program end alert message %@" = "Programul de Staking s-a incheiat in data de %@";
 "Enrolled Address Delete Message" = "Adresa va fi scoasă din programele de Tesing și Staking";
 "Wrong Password Error Message" = "Parolă greșită. Încercați din nou!";
+"Abort Delete Account" = "Abort Delete Account";
+"Delete Account" = "Delete Account";
+"Delete Confirm Email Message" = "Check your email to confirm your delete account action.";
+"Delete Scheduled Message %@" = "Your account is scheduled to be deleted on %@";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
