Bug #II-187 Handle the camera permission properly

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -41,8 +41,8 @@
 "Wrong Old Password Error Message" = "Wrong old password";
 "Change Password Success Message" = "Password changed";
 "Login After Change Password Alert Message" = "Password changed. Tap OK to Login";
-"Scanning not supported message" = "Scanning not supported";
-"No Cammera Message" = "Your device does not support scanning a code from an item. Please use a device with a camera.";
+"No Cammera Title Alert" = "No Cammera Access";
+"No Cammera Message Alert" = "Please enable the application to use the device's cammera in Settings.";
 "OK" = "OK";
 "Connect to the internet message" = "Please connect to the internet to continue!";
 "Loading message" = "Loading, please wait...";
@@ -80,6 +80,8 @@
 "Delete Account" = "Delete Account";
 "Delete Confirm Email Message" = "Check your email to confirm your delete account action.";
 "Delete Scheduled Message %@" = "Your account is scheduled to be deleted on %@";
+"Settings Camera Redirect Message" = "Please go to Settings and allow the app to use the camera.";
+"Go to Settings" = "Go to Settings";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
