--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -41,8 +41,8 @@
 "Wrong Old Password Error Message" = "Parola veche greșită";
 "Change Password Success Message" = "Parola schimbată";
 "Login After Change Password Alert Message" = "Parola schimbată. Apasă OK pentru Login";
-"Scanning not supported message" = "Scanarea nu e suportată";
-"No Cammera Message" = "Dispozitivul dumneavoastră nu suporta scanarea. Folosiți un dispozitiv cu cameă.";
+"No Cammera Title Alert" = "Camera inacesibilă";
+"No Cammera Message Alert" = "Permiteți aplicației sa folosească camera dispozitivului.";
 "OK" = "OK";
 "Connect to the internet message" = "Conectați-vă la internet pentru a continua!";
 "Loading message" = "Îcarcă, așteptați...";
@@ -80,6 +80,8 @@
 "Delete Account" = "Delete Account";
 "Delete Confirm Email Message" = "Check your email to confirm your delete account action.";
 "Delete Scheduled Message %@" = "Your account is scheduled to be deleted on %@";
+"Settings Camera Redirect Message" = "Mergeți în setări pentru a activa accesul la camera foto.";
+"Go to Settings" = "Setări";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
