View ETH address screen paste option

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -82,6 +82,7 @@
 "Delete Scheduled Message %@" = "Your account is scheduled to be deleted on %@";
 "Settings Camera Redirect Message" = "Please go to Settings and allow the app to use the camera.";
 "Go to Settings" = "Go to Settings";
+"ETH Address Copied Message" = "The ETH address has been copied to clipboard";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
