--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -82,6 +82,7 @@
 "Delete Scheduled Message %@" = "Your account is scheduled to be deleted on %@";
 "Settings Camera Redirect Message" = "Mergeți în setări pentru a activa accesul la camera foto.";
 "Go to Settings" = "Setări";
+"ETH Address Copied Message" = "Adresa ETH a fost copiata in clipboard";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
