Refresh the proxy countries list each time a new proxy is created

--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -83,6 +83,7 @@
 "Settings Camera Redirect Message" = "Mergeți în setări pentru a activa accesul la camera foto.";
 "Go to Settings" = "Setări";
 "ETH Address Copied Message" = "Adresa ETH a fost copiata in clipboard";
+"Proxy Contries Fetch Error Message" = "Nu am reușit sa actualizăm lista țărilor disponibile, se va folosi lista precedentă.";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
