--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -83,6 +83,7 @@
 "Settings Camera Redirect Message" = "Please go to Settings and allow the app to use the camera.";
 "Go to Settings" = "Go to Settings";
 "ETH Address Copied Message" = "The ETH address has been copied to clipboard";
+"Proxy Contries Fetch Error Message" = "We couldn't update the countries list, the cached countries will be displayed.";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
